--- a/HTML/formation.html
+++ b/HTML/formation.html
@@ -24,16 +24,12 @@
                      <span class="navbar-toggler-icon"></span>
                 </button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav mx-auto flexItems">
+                        <ul class="navbar-nav mx-auto navItems">
                             <li class="nav-item">
-                                <a class="nav-link active navbarSize" aria-current="page" href="#">Home</a>
+                                <a class="nav-link active navbarSize" aria-current="page" href="/HTML/index.html">Home</a>
                             </li>
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle active navbarSize" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Évènements</a>
-                                <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item navbarSize" href="#">Animations</a></li>
-                                    <li><a class="dropdown-item navbarSize" href="/HTML/formation.html">Formations</a></li>
-                                </ul>
+                            <li class="nav-item">
+                                <a class="nav-link active navbarSize" href="/HTML/formation.html">Formations</a></li>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link active navbarSize" href="#">Blog</a>
@@ -52,13 +48,13 @@
                         </ul>
                     </div>
             </div>
-            <div style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb" class="myBreadcrumb">
-                <ol class="breadcrumb">
-                  <li class="breadcrumb-item"><a style="color:rgb(62, 62, 62);" href="#">Home</a></li>
-                  <li class="breadcrumb-item active" aria-current="page">Formations</li>
-                </ol>
-            </div>
         </nav>
+        <div style="--bs-breadcrumb-divider: '>'; background-color: #986705;" aria-label="breadcrumb" class="myBreadcrumb">
+            <ol class="breadcrumb">
+              <li class="breadcrumb-item"><a style="color:rgb(62, 62, 62);" href="/HTML/index.html">Home</a></li>
+              <li class="breadcrumb-item active" aria-current="page">Formations</li>
+            </ol>
+        </div>
     </header>
 
     <main>
@@ -66,17 +62,81 @@
             <div class="row">
                 <div class="col-1"></div>
                 <div class="col-10">
-
+                    <h3>La formation à l'apiculture.</h3>
+                        <p class="myPrimary">Asapistra propose chaque année un cycle de formation destiné aux apiculteurs amateurs, plus ou moins débutants, et des actions de formations spécifiques pour les apiculteurs confirmés qui souhaitent se perfectionner.</p><br> 
+                        <p class="myPrimary">Les séances de formation pour les débutants  sont étalées de mars à septembre, elles sont suivies d’un bilan et du recueil des besoins et suggestions pour la session suivante. La formation aborde tous les moments clés 
+                            de la vie d’une colonie et les principaux travaux au rucher. Dispensée par différents formateurs, en différents lieux, elle offre l’opportunité de découvrir une diversité de matériels et surtout de pratiques. Enfin, elle permet aux novices de vivre leurs premières expériences en contact avec les abeilles.
+                            Les séances de formations spécifiques proposées aux apiculteurs confirmés abordent des sujets plus pointus comme l'essaimage artificiel, la sélection, l'élevage de reine, etc.
+                        </p>
+                        <br>
+                        <ul class="myPrimary">Le cycle de formation débutant se compose :</ul>
+                            <li class="myPrimary">D'un ensemble théorique sur l'abeille et l'apiculture : anatomie, physiologie de l'abeille ; le matériel de l'apiculteur, la conduite d'une ruche ; la réglementation, la santé de l'abeille, la pollinistaion et la biodiversité, etc.</li>
+                            <li class="myPrimary">De cours pratiques organisés dans les différents <a class="mySecondary" href="#">ruchers école</a> que gère l'association. Ils permettent d'oberver, de reconnaître ce qui a été vu dans la partie théorique et de manipuler sur les ruches de l'association.</li>
+                        <h5>Le calendrier de formation.</h5>
+                            <p class="myPrimary">Les cours dispensés par cette formation, s'étalent sur une année: de janvier pour le premier cours théorique à décembre pour le dernier cours pratique. Les cours théoriques, au nombre de 8, se déroulent en général le mardi, en soirée, à partir de 19h.
+                                Les cours pratiques commencent au printemps, avec le démarrage de la saison apicole. Les stagiaires ont l’occasion de suivre les différentes étapes de la saison apicole et de participer aux travaux du rucher.
+                            </p>
+                        <h5>L'objectif de cette formation.</h5>
+                            <p class="myPrimary">Est de donner les bases théoriques et et une expérience pratique qui permettent aux stagiaires d'être en mesure de s'occuper eux-même de leurs ruches.<br> 
+                                Le coût de la formation est de 99€ auxquels il faut ajouter les 12€ de cotisation à Asapistra; donc 111€ au total. Il est par ailleurs demandé aux stagiaires de s’équiper eux-mêmes avec le matériel de l’apiculteur (protection, gants, lève cadre, enfumoir, brosse). Le coût de cet équipement est en général inférieur à 100€.
+                                Les cours théoriques regroupent l’ensemble des stagiaires. Pour les cours pratiques, des groupes de 5 à 6 stagiaires sont constitués. Chaque groupe est dirigé vers un des ruchers école de l’association où il est pris en charge par un formateur.
+                            </p>
+                        <h5>Inscription.</h5>
+                            <p class="myPrimary">Les candidatures pour la session de formation de 2024 seront ouvertes en mai 2023.
+                                Le nombre de personnes par session annuelle est limité (en général pas plus de 24 personnes).
+                                Ceux qui ont postulé seront contactés personnellement par le responsable de la formation qui leur indiquera la suite donnée à leur candidature.
+                                Si vous souhaitez avoir plus d'informations, <a class="mySecondary" href="#">contactez-nous</a>.
+                            </p>
+                        <h5>Nos prochains Cours</h5>
+                        <br>
                 </div>
                 <div class="col-1"></div>
             </div>
-
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-1 col-lg-1"></div>
+                <div class="col col-sm col-md-4 col-lg-4" >
+                    <div class="card" style="margin: 2%;">
+                        <img src="/IMG/bee1.jpg" class="card-image-top rounded img-fluid" alt="just a bee"></img>
+                        <div class="card-body">
+                            <h3 class="card-title">Cours Pratique</h3>
+                            <p class="card-text myPrimary">Chèr(es) apicultrices et apiculteurs amateur(e)s, pour notre prochain cours rendez-vous le mardi 4 avril à 19h au rucher école d'Illkirch.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-auto col-md-2 col-lg-2" ></div>
+                <div class="col col-sm col-md-4 col-lg-4">
+                    <div class="card" style="margin:2%;">
+                        <img src="/IMG/bees2.jpg" class="card-image-top rounded img-fluid" alt="bee keeper"></img>
+                        <div class="card-body">
+                            <h3 class="card-title">Cours Pratique</h3>
+                            <p class="card-text myPrimary">Chèr(es) apicultrices et apiculteurs amateur(e)s, pour notre prochain cours rendez-vous le mardi 11 avril à 19h au rucher école d'Ostwald.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-1 col-lg-1"></div>
+            </div>
         </div>
     </main>
 
     <footer>
-
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-5 myFontClass">
+                    Asapistra - Association Apicole de Strasbourg<br>
+                    8, rue David Gruber<br>
+                    67200 Strasbourg<br>
+                    SIRET: 539 919 381 00027
+                </div>
+                <div class="col-2"></div>
+                <div class="col-5 myFontClass">
+                    <a class="mySecondary" href="#">Contact</a> - <a class="mySecondary" href="#">Mentions légales site Internet Asapistra</a><br>
+                    Site conçu par Emmanuelle ERDMANN.<br><br>
+                    <img src="/IMG/instagram.png" class="iconClass" alt="Instagram">
+                </div>
+            </div>
+        </div>
     </footer>
-
 </body>
 </html>
