--- a/HTML/index.html
+++ b/HTML/index.html
@@ -29,12 +29,8 @@
                             <li class="nav-item">
                                 <a class="nav-link active navbarSize" aria-current="page" href="#">Home</a>
                             </li>
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle active navbarSize" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Évènements</a>
-                                <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item navbarSize" href="#">Animations</a></li>
-                                    <li><a class="dropdown-item navbarSize" href="/HTML/formation.html">Formations</a></li>
-                                </ul>
+                            <li class="nav-item">
+                                <a class="nav-link active navbarSize" href="/HTML/formation.html">Formations</a></li>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link active navbarSize" href="#">Blog</a>
@@ -200,16 +196,14 @@
     <footer>
         <div class="container-fluid">
             <div class="row">
-                <div class="col-4 myFontClass">
+                <div class="col-5 myFontClass">
                     Asapistra - Association Apicole de Strasbourg<br>
                     8, rue David Gruber<br>
                     67200 Strasbourg<br>
                     SIRET: 539 919 381 00027
                 </div>
-                <div class="col-4">
-                    
-                </div>
-                <div class="col-4 myFontClass">
+                <div class="col-2"></div>
+                <div class="col-5 myFontClass">
                     <a class="mySecondary" href="#">Contact</a> - <a class="mySecondary" href="#">Mentions légales site Internet Asapistra</a><br>
                     Site conçu par Emmanuelle ERDMANN.<br><br>
                     <img src="/IMG/instagram.png" class="iconClass" alt="Instagram">
