--- a/HTML/formation.html
+++ b/HTML/formation.html
@@ -2,9 +2,10 @@
 <html>
 
 <head>
-    <title></title>
+    <title>Formations</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
+    <meta name="description" content="Asapistra propose un cycle de formation destiné aux apiculteurs amateurs, plus ou moins débutants, et des formations spécifiques pour les apiculteurs confirmés qui souhaitent se perfectionner."/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="/CSS/formation.css">
 </head>
@@ -63,7 +64,7 @@
                 <div class="col-1"></div>
                 <div class="col-10">
                     <h3>La formation à l'apiculture.</h3>
-                        <p class="myPrimary">Asapistra propose chaque année un cycle de formation destiné aux apiculteurs amateurs, plus ou moins débutants, et des actions de formations spécifiques pour les apiculteurs confirmés qui souhaitent se perfectionner.</p><br> 
+                        <p class="myPrimary">Asapistra propose chaque année un cycle de formation destiné aux apiculteurs amateurs, plus ou moins débutants, et des formations spécifiques pour les apiculteurs confirmés qui souhaitent se perfectionner.</p><br> 
                         <p class="myPrimary">Les séances de formation pour les débutants  sont étalées de mars à septembre, elles sont suivies d’un bilan et du recueil des besoins et suggestions pour la session suivante. La formation aborde tous les moments clés 
                             de la vie d’une colonie et les principaux travaux au rucher. Dispensée par différents formateurs, en différents lieux, elle offre l’opportunité de découvrir une diversité de matériels et surtout de pratiques. Enfin, elle permet aux novices de vivre leurs premières expériences en contact avec les abeilles.
                             Les séances de formations spécifiques proposées aux apiculteurs confirmés abordent des sujets plus pointus comme l'essaimage artificiel, la sélection, l'élevage de reine, etc.
