--- a/HTML/index.html
+++ b/HTML/index.html
@@ -5,6 +5,8 @@
     <title>Asapistra | Association Apicole de Strasbourg</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width"> 
+    <meta name="descritption" content="Nos ojbectifs sont de contribuer à la sauvegarde des abeilles et au développement de leur présence au sein de l'Eurométropole de Strasbourg. "/>
+    <meta name="keywords" content="abeille, miel, apiculteur, ruche, pollinisation"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="/CSS/style.css">
 </head> 
